--- a/css/nomq_preview_master_b-master.css
+++ b/css/nomq_preview_master_b-master.css
@@ -1,1 +1,1 @@
-#u3911{background:-webkit-gradient(linear, center top, center bottom, from(rgba(255,255,255,0)),color-stop(100%, #000000));background:-webkit-linear-gradient(top,rgba(255,255,255,0) ,#000000 100%);background:linear-gradient(to bottom,rgba(255,255,255,0) ,#000000 100%);}
+#u3911{background:-webkit-gradient(linear, center top, center bottom, from(#000000),color-stop(100%, #73A0FF));background:-webkit-linear-gradient(top,#000000 ,#73A0FF 100%);background:linear-gradient(to bottom,#000000 ,#73A0FF 100%);}#u3911_align_to_page{max-width:985px;}
