--- a/css/master_a-master.css
+++ b/css/master_a-master.css
@@ -1,1 +1,1 @@
-#u1937{background-color:#000000;}#u1937_align_to_page{max-width:960px;}#u2265{border-width:0px;border-color:transparent;background-color:transparent;}#u1928,#u2101-3{background-color:transparent;}
+#u1937{background-color:#000000;}#u1937_align_to_page{max-width:960px;}#u5350-4{background-color:transparent;color:#FFFFFF;}#u2265{border-width:0px;border-color:transparent;background-color:transparent;}#u1928,#u2101-3{background-color:transparent;}
